<resources>
    <string name="app_name">parkTime</string>

    <!-- Page admin -->

    <string name="admin_page_title">Admin</string>
    <string name="admin_page_create_park">Ajouter un parc </string>


    <!-- Page d'accueil -->

    <string name="home_page_title">Selectionnez un parc</string>
    <string name="home_page_park_name">Nom du parc</string>
    <string name="home_page_park_address">Adresse du parc</string>
    <string name="home_page_park_desc">
        Sélectionnez un parc et vous y trouverez les parents disponibles pour un ParkTime !</string>


    <!-- Détail parc popup -->
    <string name="popup_park_name">@string/home_page_park_name</string>
    <string name="popup_park_address">@string/home_page_park_address</string>
    <string name="popup_park_desc">Description du parc</string>

    <!-- Page liste parents -->
    <string name="list_parent_pseudo">@string/profile_main_pseudo</string>
    <string name="list_parent_age">Age</string>
    <string name="list_parent_nbre_enfant">Nbre enfant</string>

    <!-- Page propose une rencontre-->
    <string name="ask_for_parktime">Proposer une rencontre </string>
    <string name="input_send_message">Votre message</string>
    <string name="input_choose_date">DD/MM/YYYY</string>
    <string name="input_choose_time">HH:MM</string>
    <string name="send_proposition">Confirmer</string>
    <!-- Page profile -->

    <string name="profile_main">Votre profile</string>
    <string name="profile_main_pseudo">Pseudo</string>
    <string name="profile_main_firstname">Prénom</string>
    <string name="profile_main_age">Age</string>
    <string name="profile_main_about_you">Votre description</string>
    <string name="profile_add_update_infos">Modifier des infos</string>
    <string name="profile_main_parks_fav">Parcs favoris</string>
    <string name="nom_parc">Nom parc</string>
    <string name="adresse">Adresse</string>
    <string name="image">Image</string>
    <string name="show">Show</string>
    <string name="add">Ajouter</string>
    <string name="CustomerName">Nom </string>
    <string name="CustomerAge">Prénom</string>
    <string name="ViewAll">Voir tout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retour_vers_home">Retour vers home</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_a_park">Enter a park</string>
    <string name="ajouter_un_park">Ajouter un park</string>
    <string name="save_park">Save Park</string>
    <string name="entrer_une_courte_description">Entrez une courte description</string>
    <string name="entrer_le_nom_du_park">Entrez le nom du park</string>
    <string name="exemple_1201_paquis">Ex : 1203</string>
    <string name="nom_de_la_rue">Nom de la rue</string>
    <string name="chemin_d_acc_s_l_image">Chemin d\'accès à l\'image</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion ou inscription</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nom d utilisateur invalide </string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connexion">Connexion</string>
    <string name="pas_encore_de_compte">Pas encore de compte ?</string>
    <string name="retaper_mot_de_passe">Retaper mot de passe</string>
    <string name="localit_exemple_1201">Localité Exemple : 1201</string>
    <string name="nombre_d_enfants">Nombre d\'enfants</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="m_inscrire">M\'inscrire</string>
    <string name="username">Username</string>
    <string name="administration">Administration</string>

</resources>