<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        style="@style/DefaulttextType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_title"
        style="@style/TitleTextType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cr_er_un_compte"
        app:layout_constraintStart_toStartOf="@+id/app_title"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        />

    <FrameLayout
        android:id="@+id/frameLayoutid"
        android:name=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/CustomerName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/CustomerAge"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_cusNbrEnfants"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Nombre d'enfants"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_localite"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Localité Exemple : 1201"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_mdp"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Mot de passe"
            android:importantForAutofill="no"
            android:inputType="number|textWebPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_mdp2"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Retaper mot de passe"
            android:importantForAutofill="no"
            android:inputType="textWebPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="308dp"
            android:layout_marginRight="200dp"
            android:layout_marginBottom="50dp"
            android:width="100dp"
            android:height="25dp"
            android:text="M'inscrire"
            android:textSize="10dp" />


        <!--        <Button
            android:id="@+id/btn_ViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ViewAll"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_age" />-->


        <!--       <ListView
            android:id="@+id/lv_listView_AllUsers"
            android:layout_width="wrap_content"
            android:layout_height="787dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ViewAll"
            app:layout_constraintVertical_bias="0.0" />
-->


    </FrameLayout>

    <Button
        android:id="@+id/btn_ActivityHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="313dp"
        android:width="100dp"
        android:height="25dp"
        android:onClick="backHome"
        android:text="@string/retour_vers_home"
        android:textSize="10dp" />

    <Button
        android:id="@+id/btn_GoToAddPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="-2dp"
        android:onClick="GoToAddPark"
        android:text="@string/ajouter_un_park"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>